Added "supported by innoQ"

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,14 +39,15 @@
 
         {{ content }}
 
-        <footer class="row">
-        	<div class="license-icons two columns">
+        <footer >
+           <div class="row">
+	       <div class="license-icons two columns">
         		<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">
         		  <img alt="Creative Commons License CC" width="20px"
         		       src="./img/cc.png" />
-        			<img alt="Creative Commons License BY" width="20px"
-        		       src="./img/by.png" />
-        			<img alt="Creative Commons License SA" width="20px"
+		          <img alt="Creative Commons License BY" width="20px"
+		               src="./img/by.png" />
+        		  <img alt="Creative Commons License SA" width="20px"
         		       src="./img/sa.png" />
         		</a>
         	</div>
@@ -54,8 +55,20 @@
         		<strong xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">SCS</strong> is licensed under a
 
         		<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
-        	</p>
-        </footer>
+		</p>
+	   </div>
+           <div class="row">		
+	      <div class="license-icons two columns">
+        		<a rel="sponsor" href="https://www.innoq.com/">
+        		  <img alt="innoQ" width="60px"
+        		       src="./img/innoQ.png" />
+		        </a>
+        	</div>
+        	<p class="license-text ten columns">
+		       This website is supported by innoQ.
+		</p>
+            </div>
+	</footer>
       </div>
     </div>
 
