--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <header class="main">
           <h1 class="head u-cf">
             <a href="index.html">
-              <img class="logo" src="./img/logo.png" width="200px" alt="ROCA Logo">
+              <img class="logo" src="./img/system-of-systems-scs.png" width="200px" alt="ROCA Logo">
               <span class="subhead">Self-Contained Systems</span>
             </a>
           </h1>
@@ -57,7 +57,7 @@
         		<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
 		</p>
 	   </div>
-           <div class="row">		
+           <div class="row">
 	      <div class="license-icons two columns">
         		<a rel="sponsor" href="https://www.innoq.com/">
         		  <img alt="innoQ" width="60px"
