--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,11 @@
         <header class="main">
           <h1 class="head u-cf">
             <a href="index.html">
-              <img class="logo" src="./img/system-of-systems-scs.png" width="200px" alt="ROCA Logo">
-              <span class="subhead">Self-Contained Systems</span>
+              <img class="logo" src="./img/system-of-systems-scs.png" width="150px" alt="ROCA Logo">
+              <span class="lead" style="display:block;">Self-Contained Systems</span>
             </a>
           </h1>
-          <p class="lead">Assembling Software from Independent Systems</p>
+          <p class="subhead">Assembling Software from Independent Systems</p>
 
         </header>
 
