--- a/css/scs.css
+++ b/css/scs.css
@@ -464,6 +464,8 @@ hr {
 
   border-bottom: 2px solid #eee;
   padding-bottom: 3rem;
+
+  text-align: center;
 }
 
 .head {
@@ -478,7 +480,7 @@ hr {
 .lead {
   margin-bottom: 0;
   margin-top: 2rem;
-  font-size: 2.2rem;
+  font-size: 4rem;
 }
 
 .subhead {
@@ -511,13 +513,13 @@ hr {
 }
 
 .logo {
-  margin-right: 2rem;
-  width: 50px;
-  float: left;
+  width: 150px;
 }
 
 .main h1, p {
   margin-right: 0;
+  margin-bottom:0px;
+  margin-top:20px;
 }
 
 h2 {
