changed alternative text

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <header class="main">
           <h1 class="head u-cf">
             <a href="index.html">
-              <img class="logo" src="./img/system-of-systems-scs.png" width="150px" alt="ROCA Logo">
+              <img class="logo" src="./img/system-of-systems-scs.png" width="150px" alt="SCS Logo">
               <span class="lead" style="display:block;">Self-Contained Systems</span>
             </a>
           </h1>
