--- a/css/scs.css
+++ b/css/scs.css
@@ -173,7 +173,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 { font-size: 4.0rem; line-height: 1.2; }
 h2 { font-size: 3.6rem; line-height: 1.25; }
-h3 { font-size: 3.0rem; line-height: 1.3; }
+h3 { font-size: 3.0rem; line-height: 1.3; margin-top: 3.0rem;}
 h4 { font-size: 2.4rem; line-height: 1.35; }
 h5 { font-size: 1.8rem; line-height: 1.5; }
 h6 { font-size: 1.5rem; line-height: 1.6; }
