Add anchor around sponsor name
Because the license is linked in the text, the sponsor should be, too.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
                 </a>
               </div>
               <p class="license-text ten columns">
-                This website is supported by innoQ.
+                This website is supported by <a rel="sponsor" href="https://www.innoq.com/">innoQ</a>.
               </p>
             </div>
           </footer>
