--- a/css/scs.css
+++ b/css/scs.css
@@ -340,9 +340,9 @@ label > .label-body {
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 ul {
-  list-style: circle inside; }
+  list-style: circle outside; }
 ol {
-  list-style: decimal inside; }
+  list-style: decimal outside; }
 ol, ul {
   padding-left: 0;
   margin-top: 0; }
@@ -353,7 +353,8 @@ ol ul {
   margin: 1.5rem 0 1.5rem 3rem;
   font-size: 90%; }
 li {
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+  margin-left: 2rem;}
 
 @media (min-width: 750px) {
   ol li {
