Update INNOQ logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
             <div class="row">
               <div class="license-icons two columns">
                 <a rel="sponsor" href="https://www.innoq.com/">
-                  <img alt="innoQ" width="60px" src="./img/innoQ.png"/>
+                  <img alt="INNOQ" width="60" src="./img/innoq-logo--bluered.svg"/>
                 </a>
               </div>
               <p class="license-text ten columns">
@@ -92,4 +92,3 @@
     </script>
   </body>
 </html>
-
