Disable Google fonts for now

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
       </div>
     </div>
 
-    <script charset="utf-8" type="text/javascript" src="./js/webfont.js"></script>
+    <!-- <script charset="utf-8" type="text/javascript" src="./js/webfont.js"></script>
     <script type="text/javascript">
       // Webfont-loader does feature detection itself, so no Modernizr needed to guard this call.
       WebFont.load({
@@ -80,6 +80,6 @@
         },
         timeout: 2000 // Set the timeout to two seconds
       });
-    </script>
+    </script> -->
   </body>
 </html>
