Add privacy link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
               <li role="presentation"><a href="vs-ms.html">vs. Microservice</a></li>
               <li role="presentation"><a href="links.html">Links</a></li>
               <li role="presentation"><a href="discussion.html">Discussion</a></li>
+              <li role="presentation"><a href="https://www.innoq.com/de/datenschutz">Privacy</a></li>
             </ul>
           </nav>
 
