--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     <![endif]-->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/scs.css">
+    <link rel="icon" type="image/svg+xml" href="./img/favicon.svg" sizes="any">
     <script async defer data-domain="scs-architecture.org" src="https://stats.innoq.com/js/index.js"></script>
   </head>
   <body>
