Update INNOQ logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,11 +61,11 @@
             <div class="row">
               <div class="license-icons two columns">
                 <a rel="sponsor" href="https://www.innoq.com/">
-                  <img alt="INNOQ" width="60" src="./img/innoq-logo--bluered.svg"/>
+                  <img alt="INNOQ" width="60" src="./img/innoq-logo--petrolapricot.svg"/>
                 </a>
               </div>
               <p class="license-text ten columns">
-                This website is supported by <a rel="sponsor" href="https://www.innoq.com/">innoQ</a>.
+                This website is supported by <a rel="sponsor" href="https://www.innoq.com/">INNOQ</a>.
               </p>
             </div>
           </footer>
