add simple grid viewing component
at the moment all grid links open as standalone pages
showing directly the CDN url. As this is uncomfortable,
I added a viewer that allows to stay on the page and click through
the slides

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,9 @@
     <meta name="description" content="{{page.description}}">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/scs.css">
+    <link rel="stylesheet" href="css/components/img-grid-viewer.css">
     <link rel="icon" type="image/svg+xml" href="./img/favicon.svg" sizes="any">
+    <script defer src="js/img-grid-viewer.js"></script>
     <script defer data-domain="scs-architecture.org" src="https://plausible.io/js/script.outbound-links.js"></script>
   </head>
   <body>
